--- a/kaggle_glasses_using_Bayesian_optimization.ipynb
+++ b/kaggle_glasses_using_Bayesian_optimization.ipynb
@@ -11,10 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project is to determine if a person is wearing glasses or not using data contianing all features. These features are generated from a Generative Adversarial Neural Network (GAN). The detailed information can refer to [here](https://www.kaggle.com/jeffheaton/glasses-or-no-glasses).\n",
+    "This project is to classify if a person is wearing glasses or not using data contianing features, which were generated from a Generative Adversarial Neural Network (GAN). The detailed information can refer to [here](https://www.kaggle.com/jeffheaton/glasses-or-no-glasses).\n",
     "### Data\n",
-    "There are two data were used for this project: **(1)** training.csv, which include the 512 features one response variable glasses (1 represent have glass, 0 means no glasses). **(2)** submit.csv, which in fact is the test data which to measure how good of the model.\n",
-    "\n",
+    " \n",
     "**Objetive**: To classify the data into two category use optmized netrual network with Bayesian optimization."
    ]
   },
@@ -561,8 +560,7 @@
     "If the P-Value of the Shapiro Wilk Test is larger than 0.05, we assume a normal distribution\n",
     "If the P-Value of the Shapiro Wilk Test is smaller than 0.05, we do not assume a normal distribution\n",
     "\n",
-    "More detailed information on normal distribution can be found \n",
-    "https://towardsdatascience.com/6-ways-to-test-for-a-normal-distribution-which-one-to-use-9dcf47d8fa93"
+    "More detailed information on normal distribution can be found [here](https://towardsdatascience.com/6-ways-to-test-for-a-normal-distribution-which-one-to-use-9dcf47d8fa93)"
    ]
   },
   {
