--- a/kaggle_glasses_using_Bayesian_optimization.ipynb
+++ b/kaggle_glasses_using_Bayesian_optimization.ipynb
@@ -8,6 +8,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--2020-07-18 16:26:25--  https://github.com/fmfn/BayesianOptimization/blob/master/README.md\n",
+      "Resolving github.com (github.com)... 140.82.114.4\n",
+      "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: unspecified [text/html]\n",
+      "Saving to: 'README.md.1'\n",
+      "\n",
+      "     0K .......... .......... .......... .......... ..........  478K\n",
+      "    50K .......... .......... .......... .......... ..........  971K\n",
+      "   100K .......... .........                                   4.22M=0.2s\n",
+      "\n",
+      "2020-07-18 16:26:26 (743 KB/s) - 'README.md.1' saved [122106]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://github.com/fmfn/BayesianOptimization/blob/master/README.md"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
